src/test/ui/error-codes/E0771.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/E0771.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0771]: use of non-static lifetime `'a` in const generic
  --> $DIR/E0771.rs:4:41
   |
LL | fn function_with_str<'a, const STRING: &'a str>() {}
   |                                         ^^
   |
   = note: for more information, see issue #74052 <https://github.com/rust-lang/rust/issues/74052>

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0771`.
